--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -35,6 +35,16 @@
 </head>
 
 <body>
+  <div id="splash"></div>
+
+  <section id="logo">
+    <div class="container text-center wow pulse">
+      <a href="/"> <img src="~/images/logo-white.svg" alt="logo" /></a>
+      <br />
+      <h1>Recept</h1>
+    </div>
+  </section>
+
   @RenderBody() 
 
   <!-- Website Footer
@@ -42,24 +52,12 @@
   <footer>
     <div class="container">
       <div class="row">
-        <!-- About -->
-        <div class="col-md-6 col-sm-12 text-center">
-          <h3>About</h3>
-          <div class="footer-about">
-            "A recipe book is one that you use daily and what we in our family
-            call 'a living book' — a book that you use all the time,
-            not just read once and discard on the shelf.
-            Recipes are by nature derivative and meant to be shared -
-            that is how they improve, are changed, how new ideas are formed. ”
-          </div>
-        </div>
         <!-- Author -->
         <div class="col-md-6 col-sm-12 text-center">
           <div class="footer-author">
-            Made with
-            <i class="fa fa-heart" aria-hidden="true"></i>
-            love by
-            <a href="https://jraleman.com/" target="_blank">Jose Ramon</a>.
+            <a href="https://github.com/alundgren/irudd-cooking">
+              <img src="~/images/icon-github.svg"  alt="Github">
+            </a>
           </div>
         </div>
       </div>
