--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
   <link rel="stylesheet" type="text/css" href="~/css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="~/css/font-awesome.min.css"  />
   <link rel="stylesheet" type="text/css" href="~/css/animate.min.css" />
-  <link rel="stylesheet" type="text/css" href="~/css/styles.css" />
+  <link rel="stylesheet" type="text/css" href="~/css/styles.css?v=202005091" />
 </head>
 
 <body>
