--- a/Pages/Recipe.cshtml
+++ b/Pages/Recipe.cshtml
@@ -11,7 +11,18 @@
         <div class="col-12">
           <h2>@Model.Recipe.Name</h2>
         </div>
+      </div>      
+
+      @if(Model.Recipe.MainImageUrl != null)
+      {
+      <div class="row vertical-align">
+        <div class="col-12">
+          <div class="col-md-8 pull-left wow swing">
+            <img src="@Model.Recipe.MainImageUrl" class="recipe-picture" />
+          </div>
+        </div>
       </div>
+      }
 
       <div class="row wow slideInUp">
         <div class="col-12">
