--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -28,10 +28,10 @@
   <!-- CSS files
   ============== -->
   <link rel="stylesheet" type="text/css" href="~/css/reset.css" />
-  <link rel="stylesheet" type="text/css" href="~/css/bootstrap.min.css" />
-  <link rel="stylesheet" type="text/css" href="~/css/font-awesome.min.css"  />
+  <link rel="stylesheet" type="text/css" href="~/css/bootstrap.min.css" />  
+  <link rel="stylesheet" type="text/css" href="~/css/fontawsome-5.14.0.all.min.css"  />
   <link rel="stylesheet" type="text/css" href="~/css/animate.min.css" />
-  <link rel="stylesheet" type="text/css" href="~/css/styles.css?v=202005091" />
+  <link rel="stylesheet" type="text/css" href="~/css/styles.css?v=202009062" />
 </head>
 
 <body>
