--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -240,6 +240,11 @@ table {
   -moz-box-shadow: 0 1px 0 rgba(0,0,0,.15);
   box-shadow: 0 1px 0 rgba(0,0,0,.15);
 }
+.ingredient-item-link {
+    margin-left:5px;
+    color: #cacaca;
+}
+
 .recipe-directions ol {
     counter-reset: li;
     list-style: none;
