--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,20 +1,21 @@
-﻿@page
+﻿@page "/{tag?}"
 @model IndexModel
 @{
     ViewData["Title"] = "Recept";
 }
 
 @section nav {
-    <nav class="navbar navbar-expand-lg" style="padding-top:12px">
+    <nav class="navbar navbar-expand-lg" style="padding-top: 12px">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" style="color:#f9f9f9;font-size:25px" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Kategori
+                <a class="nav-link dropdown-toggle" style="color: #f9f9f9; font-size: 25px" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    @(Model.CurrentTagName ?? "Kategori")
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    @foreach(var t in Model.Book.Tags)
+                    <a class="dropdown-item" href="/">Visa alla</a>
+                    @foreach (var t in Model.Book.Tags)
                     {
-                        <a class="dropdown-item" href="#">@t</a>
+                        <a class="dropdown-item" href="/@t">@t</a>
                     }
                 </div>
             </li>
@@ -30,13 +31,14 @@
 <section id="items">
     <div class="container">
         <div class="row">
-        @foreach(var recipe in Model.Book.Recipes)
-        {
-            <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
-                <div class="recipe-item text-center">
-                    <a href="/recipe/@recipe.Name"><h3>@recipe.Name</h3></a>
+            @foreach(var recipe in Model.VisibleRecipes)
+            {
+                <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
+                    <div class="recipe-item text-center">
+                        <a href="/recipe/@recipe.Name"><h3>@recipe.Name</h3></a>
+                    </div>
                 </div>
-            </div>
-        }
+            }
+        </div>
     </div>
 </section>
