better mobile layout

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,7 +6,7 @@
 
 @section nav {
     <nav class="navbar navbar-expand-lg" style="padding-top: 12px">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav mr-auto" style="z-index:10000">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" style="color: #f9f9f9; font-size: 25px" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     @(Model.CurrentTagName ?? "Kategori")
