--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -46,11 +46,8 @@
   <section id="logo">
     <div class="container wow pulse">
         <div style="float:left;padding-right:15px">
-            <a href="/"> <img src="~/images/logo-white.svg" alt="logo" /></a>
+            <a href="/"> <img src="~/images/logo-white.svg" alt="logo" /><h1>Recept</h1></a>
         </div>
-        <div style="float:left">
-            <h1>Recept</h1>
-        </div>        
         <div style="float:right">
             @RenderSection("nav", false)
         </div>
